# eromatome-dl

./: .gitignore  README.md  pyproject.toml
eromatome_dl/: __init__.py  __main__.py  app.py  downloader.py  encoding.py  http.py  models.py
eromatome_dl/sites/: __init__.py  base.py  matome.py  moeimg.py  pashalism.py
