[project]
name = "eromatome-dl"
version = "0.1.4"
description = "GUI-first matome blog image downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eromatome-dl = "eromatome_dl.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
